# postgres-db

./: .dvcignore  .gitattributes  .gitignore  Makefile  README.md  data.dvc  download-dump.py  dummy-populate.sql  main.py  pyproject.toml  reinit-postgres.sh  unzip-dump.sh
.devcontainer/: Dockerfile  Dockerfile.postgres  devcontainer.json  docker-compose.yml
.dvc/: config
frontend/: astro.config.mjs  eslint.config.js  package-lock.json  package.json  prettier.config.js
frontend/src/: database.gen.d.ts  database.ts  utils.ts
frontend/src/components/: MemberListItem.astro  NavBar.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/pages/edustaja/: [memberOfParliament].astro
pipes/: 01-mp-pipe.py  02-interest-pipe.py  03-ballot-pipe.py  04-vote-pipe.py  05-parties-pipe.py  06-mp-party-membership-pipe.py  0x-agenda_item-pipe.py  SELECT id,.sql  ballot_pipe.py  committee_pipe.py  db.py  harmonize.py  interest_pipe.py  mp_committee_membership_pipe.py  mp_party_membership_pipe.py  mp_pipe.py  parties_pipe.py  run_pipes.py  vote_pipe.py  vote_pipe2.py  vote_pipe3.py  vote_pipe4.py
postgres-init-scripts/: 01-create-test-table.sql  01-create_tables.sql  01_create_tables.sql  02-create-tables.sql
