[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-manager>=1.7.0",
    "adbc-driver-postgresql>=1.7.0",
    "gdown>=5.2.0",
    "lxml>=6.0.0",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
]
